# typst-notes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: 2026-03-18_14-32-50_Perplexity.md  typst_notes_takes_docs.md
assets/docs/: typst-api.typ  typst-changelog.typ  typst-syntax.typ
assets/plan/: 01-overview.md  02-typst-framework.md  03-rust-core-cli.md  04-tauri-app.md  05-implementation-phases.md
assets/plan/desktop/: 02-rust-backend.md  03-frontend.md  04-typst-bundling.md
assets/plan/fixes/: 01-auto-index-on-compile.md  02-note-header-rendering.md  03-id-and-hierarchy-rework.md  04-type-validation-and-fields.md
assets/test-vault/: note-paths.csv  notes-index.json  vault.typ
assets/test-vault/assets/: current.html
assets/test-vault/notes/: 2026-03-15.typ  2026-03-19.typ  2026-03-20.typ  add-tauri-app.typ  (+11 more)
docs/: index.html
examples/: example.typ
notes-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
notes-app/src/: App.svelte  app.css
notes-app/src-tauri/: Cargo.toml  tauri.conf.json
notes-app/src-tauri/capabilities/: default.json
notes-app/src-tauri/src/: commands.rs  main.rs  state.rs
notes-cli/: Cargo.toml
notes-cli/src/: main.rs
notes-core/: Cargo.toml
notes-core/src/: ast.rs  compiler.rs  csv_registry.rs  error.rs  graph.rs  index.rs  lib.rs  note.rs  query.rs  sync.rs  types.rs  vault.rs
notes-framework/: typst.toml
notes-framework/src/: backlinks.typ  graph.typ  index.typ  lib.typ  note-type.typ  note.typ  vault.typ  xlink.typ
scripts/: fetch-binaries.sh
(+14 files in other folders)
