[package]
name = "notes-core"
version = "0.1.0"
edition = "2021"
description = "Core library for typst-notes: AST parsing, indexing, compilation"

[dependencies]
typst-syntax = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
notify = "7"
wait-timeout = "0.2"

# Компиляция (Phase 5 — пока закомментировано)
# typst = "0.14"
# typst-kit = "0.14"

[dev-dependencies]
tempfile = "3"
